--- a/Day-4/Employee-Management/index.html
+++ b/Day-4/Employee-Management/index.html
@@ -11,12 +11,7 @@
       <form id="login-form">
         <div class="input">
           <input type="text" id="username" placeholder="Username" required />
-          <input
-            type="password"
-            id="password"
-            placeholder="Password"
-            required
-          />
+          <input type="password" id="password" placeholder="Password" required />
           <div class="btn"><button type="submit">Login</button></div>
         </div>
       </form>
